pyEff/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    DQUOTES
    INVARIANT
    COMMENT
    CHECK
    BOOL
    ATTACHED
    SEPARTOR
    CONVERT
    REQUIRE
    OCTINT
    CHARCONST
    DEBUG
    ATTRIBUTE
    NOT
    BININT
    DOT
    OLD
    DETACHABLE
    AGENT
    ENSURE
    ARRAY
    INSPECT
    BOOLEAN
    HEXINT
    RETRY
    CREATION
    AT_SIGN
    WHEN
    INDEXING
    LOCAL
    NOTE

Grammar

Rule 0     S' -> class
Rule 1     class -> class_header generic_class obsolete_class inheritance create features END
Rule 2     class_header -> hmark CLASS IDENTIFIER
Rule 3     hmark -> DEFERRED
Rule 4     hmark -> EXPANDED
Rule 5     hmark -> SEPERATE
Rule 6     hmark -> empty
Rule 7     generic_class -> LSQUARE generic_list RSQUARE
Rule 8     generic_class -> empty
Rule 9     generic_list -> generic_term
Rule 10    generic_list -> generic_list COMMA generic_term
Rule 11    generic_list -> empty
Rule 12    generic_term -> IDENTIFIER constraint
Rule 13    constraint -> empty
Rule 14    obsolete_class -> OBSOLETE STRING
Rule 15    obsolete_class -> empty
Rule 16    inheritance -> INHERIT inh_list
Rule 17    inheritance -> empty
Rule 18    inh_list -> class_element
Rule 19    inh_list -> inh_list class_element
Rule 20    inh_list -> inh_list COLON class_element
Rule 21    class_element -> class_type inh_features
Rule 22    inh_features -> feature_arrangement1
Rule 23    inh_features -> feature_arrangement2
Rule 24    inh_features -> feature_arrangement3
Rule 25    inh_features -> feature_arrangement4
Rule 26    inh_features -> feature_arrangement5
Rule 27    inh_features -> empty
Rule 28    feature_arrangement1 -> rename export_opt undefine_opt redefine_opt select_opt END
Rule 29    feature_arrangement2 -> export undefine_opt redefine_opt select_opt END
Rule 30    feature_arrangement3 -> undefine redefine_opt select_opt END
Rule 31    feature_arrangement4 -> redefine select_opt END
Rule 32    feature_arrangement5 -> select END
Rule 33    rename -> RENAME rname_list
Rule 34    rname_list -> fname ASSIGN fname
Rule 35    rname_list -> rname_list COMMA fname ASSIGN fname
Rule 36    export_opt -> export
Rule 37    export_opt -> empty
Rule 38    export -> EXPORT elist
Rule 39    elist -> eitem
Rule 40    elist -> elist eitem
Rule 41    elist -> elist COMMA eitem
Rule 42    eitem -> users routine
Rule 43    routine -> routine_list
Rule 44    routine -> ALL
Rule 45    routine_list -> fname
Rule 46    routine_list -> empty
Rule 47    users -> LCUR_PARN class_list RCUR_PARN
Rule 48    class_list -> IDENTIFIER
Rule 49    class_list -> class_list COMMA IDENTIFIER
Rule 50    class_list -> empty
Rule 51    undefine_opt -> undefine
Rule 52    undefine_opt -> empty
Rule 53    undefine -> UNDEFINE routine_list
Rule 54    redefine_opt -> redefine
Rule 55    redefine_opt -> empty
Rule 56    redefine -> REDEFINE routine_list
Rule 57    select_opt -> select
Rule 58    select_opt -> empty
Rule 59    select -> SELECT routine_list
Rule 60    create -> create_block
Rule 61    create -> empty
Rule 62    create_block -> CREATE users_opt proc_list
Rule 63    users_opt -> users
Rule 64    users_opt -> empty
Rule 65    proc_list -> IDENTIFIER
Rule 66    proc_list -> proc_list COMMA IDENTIFIER
Rule 67    proc_list -> empty
Rule 68    features -> fblock
Rule 69    features -> empty
Rule 70    fblock -> FEATURE users_opt fdec_list
Rule 71    fdec_list -> fdec
Rule 72    fdec_list -> fdec_list fdec
Rule 73    fdec_list -> fdec_list COLON fdec
Rule 74    fdec -> new_feature fbody
Rule 75    new_feature -> fname
Rule 76    new_feature -> FROZEN fname
Rule 77    fbody -> arg_type_opt basic_body
Rule 78    arg_type_opt -> LPAREN entity_list RPAREN COLON type
Rule 79    arg_type_opt -> empty
Rule 80    entity_list -> entity_group
Rule 81    entity_list -> entity_list entity_group
Rule 82    entity_list -> entity_list COMMA entity_group
Rule 83    entity_group -> idlist COLON type
Rule 84    idlist -> IDENTIFIER
Rule 85    idlist -> idlist COMMA IDENTIFIER
Rule 86    basic_body -> IS fvalue
Rule 87    basic_body -> empty
Rule 88    fvalue -> manifest_constant
Rule 89    fvalue -> UNIQUE
Rule 90    fvalue -> function
Rule 91    function -> function_body END
Rule 92    function_body -> DEFERRED
Rule 93    function_body -> Do fnbody
Rule 94    function_body -> ONCE fnbody
Rule 95    function_body -> EXTERNAL STRING exname
Rule 96    exname -> ALIAS STRING
Rule 97    exname -> empty
Rule 98    fnbody -> ins
Rule 99    fnbody -> fnbody ins
Rule 100   ins -> assignment
Rule 101   ins -> conditional
Rule 102   ins -> loop
Rule 103   ins -> COMMA
Rule 104   assignment -> variable ass_op expr
Rule 105   variable -> IDENTIFIER
Rule 106   variable -> RESULT
Rule 107   ass_op -> ASSIGNMENT
Rule 108   conditional -> IF expr THEN fnbody elseif_group else_opt END
Rule 109   elseif_group -> elseif_group ELSEIF expr THEN fnbody
Rule 110   elseif_group -> empty
Rule 111   else_opt -> ELSE fnbody
Rule 112   else_opt -> empty
Rule 113   loop -> FROM fnbody variant UNTIL expr LOOP fnbody END
Rule 114   variant -> VARIANT
Rule 115   variant -> VARIANT expr
Rule 116   variant -> VARIANT IDENTIFIER COLON expr
Rule 117   variant -> empty
Rule 118   expr -> expr EQUAL expr
Rule 119   expr -> expr NOT_EQUAL expr
Rule 120   expr -> expr GREATER expr
Rule 121   expr -> expr LESS expr
Rule 122   expr -> expr LESS_EQUAL expr
Rule 123   expr -> expr GREATER_EQUAL expr
Rule 124   expr -> expr PLUS expr
Rule 125   expr -> expr MINUS expr
Rule 126   expr -> expr TIMES expr
Rule 127   expr -> expr DIVIDE expr
Rule 128   expr -> expr INT_DIVIDE expr
Rule 129   expr -> expr INT_REMAINDER expr
Rule 130   expr -> expr AND expr
Rule 131   expr -> expr OR expr
Rule 132   expr -> expr XOR expr
Rule 133   expr -> expr AND_THEN expr
Rule 134   expr -> expr OR_ELSE expr
Rule 135   expr -> expr IMPLIES expr
Rule 136   expr -> RESULT
Rule 137   expr -> CURRENT
Rule 138   expr -> LPAREN expr RPAREN
Rule 139   expr -> bool_const
Rule 140   expr -> CHARACTER
Rule 141   expr -> INTEGER
Rule 142   expr -> REAL
Rule 143   expr -> STRING
Rule 144   attr_list -> IDENTIFIER
Rule 145   attr_list -> attr_list COMMA IDENTIFIER
Rule 146   attr_list -> empty
Rule 147   expr_list -> expr
Rule 148   expr_list -> expr_list COMMA expr
Rule 149   expr_list -> empty
Rule 150   manifest_constant -> bool_const
Rule 151   manifest_constant -> CHARACTER
Rule 152   manifest_constant -> int_const
Rule 153   manifest_constant -> real_const
Rule 154   manifest_constant -> STRING
Rule 155   bool_const -> TRUE
Rule 156   bool_const -> FALSE
Rule 157   int_const -> INTEGER
Rule 158   int_const -> MINUS INTEGER
Rule 159   int_const -> PLUS INTEGER
Rule 160   real_const -> REAL
Rule 161   real_const -> MINUS REAL
Rule 162   real_const -> PLUS REAL
Rule 163   fname -> IDENTIFIER
Rule 164   type -> class_type
Rule 165   type -> EXPANDED class_type
Rule 166   type -> LIKE CURRENT
Rule 167   type -> LIKE IDENTIFIER
Rule 168   class_type -> IDENTIFIER generic
Rule 169   generic -> LSQUARE type_list RSQUARE
Rule 170   generic -> empty
Rule 171   type_list -> type
Rule 172   type_list -> type_list COMMA type
Rule 173   type_list -> empty
Rule 174   empty -> <empty>

Terminals, with rules where they appear

AGENT                : 
ALIAS                : 96
ALL                  : 44
AND                  : 130
AND_THEN             : 133
ARRAY                : 
ASSIGN               : 34 35
ASSIGNMENT           : 107
ATTACHED             : 
ATTRIBUTE            : 
AT_SIGN              : 
BININT               : 
BOOL                 : 
BOOLEAN              : 
CHARACTER            : 140 151
CHARCONST            : 
CHECK                : 
CLASS                : 2
COLON                : 20 73 78 83 116
COMMA                : 10 35 41 49 66 82 85 103 145 148 172
COMMENT              : 
CONVERT              : 
CREATE               : 62
CREATION             : 
CURRENT              : 137 166
DEBUG                : 
DEFERRED             : 3 92
DETACHABLE           : 
DIVIDE               : 127
DOT                  : 
DQUOTES              : 
Do                   : 93
ELSE                 : 111
ELSEIF               : 109
END                  : 1 28 29 30 31 32 91 108 113
ENSURE               : 
EQUAL                : 118
EXPANDED             : 4 165
EXPORT               : 38
EXTERNAL             : 95
FALSE                : 156
FEATURE              : 70
FROM                 : 113
FROZEN               : 76
GREATER              : 120
GREATER_EQUAL        : 123
HEXINT               : 
IDENTIFIER           : 2 12 48 49 65 66 84 85 105 116 144 145 163 167 168
IF                   : 108
IMPLIES              : 135
INDEXING             : 
INHERIT              : 16
INSPECT              : 
INTEGER              : 141 157 158 159
INT_DIVIDE           : 128
INT_REMAINDER        : 129
INVARIANT            : 
IS                   : 86
LCUR_PARN            : 47
LESS                 : 121
LESS_EQUAL           : 122
LIKE                 : 166 167
LOCAL                : 
LOOP                 : 113
LPAREN               : 78 138
LSQUARE              : 7 169
MINUS                : 125 158 161
NOT                  : 
NOTE                 : 
NOT_EQUAL            : 119
OBSOLETE             : 14
OCTINT               : 
OLD                  : 
ONCE                 : 94
OR                   : 131
OR_ELSE              : 134
PLUS                 : 124 159 162
RCUR_PARN            : 47
REAL                 : 142 160 161 162
REDEFINE             : 56
RENAME               : 33
REQUIRE              : 
RESULT               : 106 136
RETRY                : 
RPAREN               : 78 138
RSQUARE              : 7 169
SELECT               : 59
SEPARTOR             : 
SEPERATE             : 5
STRING               : 14 95 96 143 154
THEN                 : 108 109
TIMES                : 126
TRUE                 : 155
UNDEFINE             : 53
UNIQUE               : 89
UNTIL                : 113
VARIANT              : 114 115 116
WHEN                 : 
XOR                  : 132
error                : 

Nonterminals, with rules where they appear

arg_type_opt         : 77
ass_op               : 104
assignment           : 100
attr_list            : 145
basic_body           : 77
bool_const           : 139 150
class                : 0
class_element        : 18 19 20
class_header         : 1
class_list           : 47 49
class_type           : 21 164 165
conditional          : 101
constraint           : 12
create               : 1
create_block         : 60
eitem                : 39 40 41
elist                : 38 40 41
else_opt             : 108
elseif_group         : 108 109
empty                : 6 8 11 13 15 17 27 37 46 50 52 55 58 61 64 67 69 79 87 97 110 112 117 146 149 170 173
entity_group         : 80 81 82
entity_list          : 78 81 82
exname               : 95
export               : 29 36
export_opt           : 28
expr                 : 104 108 109 113 115 116 118 118 119 119 120 120 121 121 122 122 123 123 124 124 125 125 126 126 127 127 128 128 129 129 130 130 131 131 132 132 133 133 134 134 135 135 138 147 148
expr_list            : 148
fblock               : 68
fbody                : 74
fdec                 : 71 72 73
fdec_list            : 70 72 73
feature_arrangement1 : 22
feature_arrangement2 : 23
feature_arrangement3 : 24
feature_arrangement4 : 25
feature_arrangement5 : 26
features             : 1
fname                : 34 34 35 35 45 75 76
fnbody               : 93 94 99 108 109 111 113 113
function             : 90
function_body        : 91
fvalue               : 86
generic              : 168
generic_class        : 1
generic_list         : 7 10
generic_term         : 9 10
hmark                : 2
idlist               : 83 85
inh_features         : 21
inh_list             : 16 19 20
inheritance          : 1
ins                  : 98 99
int_const            : 152
loop                 : 102
manifest_constant    : 88
new_feature          : 74
obsolete_class       : 1
proc_list            : 62 66
real_const           : 153
redefine             : 31 54
redefine_opt         : 28 29 30
rename               : 28
rname_list           : 33 35
routine              : 42
routine_list         : 43 53 56 59
select               : 32 57
select_opt           : 28 29 30 31
type                 : 78 83 171 172
type_list            : 169 172
undefine             : 30 51
undefine_opt         : 28 29
users                : 42 63
users_opt            : 62 70
variable             : 104
variant              : 113

Parsing method: LALR

state 0

    (0) S' -> . class
    (1) class -> . class_header generic_class obsolete_class inheritance create features END
    (2) class_header -> . hmark CLASS IDENTIFIER
    (3) hmark -> . DEFERRED
    (4) hmark -> . EXPANDED
    (5) hmark -> . SEPERATE
    (6) hmark -> . empty
    (174) empty -> .

    DEFERRED        shift and go to state 3
    EXPANDED        shift and go to state 2
    SEPERATE        shift and go to state 1
    CLASS           reduce using rule 174 (empty -> .)

    hmark                          shift and go to state 4
    class_header                   shift and go to state 5
    class                          shift and go to state 6
    empty                          shift and go to state 7

state 1

    (5) hmark -> SEPERATE .

    CLASS           reduce using rule 5 (hmark -> SEPERATE .)


state 2

    (4) hmark -> EXPANDED .

    CLASS           reduce using rule 4 (hmark -> EXPANDED .)


state 3

    (3) hmark -> DEFERRED .

    CLASS           reduce using rule 3 (hmark -> DEFERRED .)


state 4

    (2) class_header -> hmark . CLASS IDENTIFIER

    CLASS           shift and go to state 8


state 5

    (1) class -> class_header . generic_class obsolete_class inheritance create features END
    (7) generic_class -> . LSQUARE generic_list RSQUARE
    (8) generic_class -> . empty
    (174) empty -> .

    LSQUARE         shift and go to state 10
    OBSOLETE        reduce using rule 174 (empty -> .)
    INHERIT         reduce using rule 174 (empty -> .)
    CREATE          reduce using rule 174 (empty -> .)
    FEATURE         reduce using rule 174 (empty -> .)
    END             reduce using rule 174 (empty -> .)

    generic_class                  shift and go to state 9
    empty                          shift and go to state 11

state 6

    (0) S' -> class .



state 7

    (6) hmark -> empty .

    CLASS           reduce using rule 6 (hmark -> empty .)


state 8

    (2) class_header -> hmark CLASS . IDENTIFIER

    IDENTIFIER      shift and go to state 12


state 9

    (1) class -> class_header generic_class . obsolete_class inheritance create features END
    (14) obsolete_class -> . OBSOLETE STRING
    (15) obsolete_class -> . empty
    (174) empty -> .

    OBSOLETE        shift and go to state 14
    INHERIT         reduce using rule 174 (empty -> .)
    CREATE          reduce using rule 174 (empty -> .)
    FEATURE         reduce using rule 174 (empty -> .)
    END             reduce using rule 174 (empty -> .)

    obsolete_class                 shift and go to state 13
    empty                          shift and go to state 15

state 10

    (7) generic_class -> LSQUARE . generic_list RSQUARE
    (9) generic_list -> . generic_term
    (10) generic_list -> . generic_list COMMA generic_term
    (11) generic_list -> . empty
    (12) generic_term -> . IDENTIFIER constraint
    (174) empty -> .

    IDENTIFIER      shift and go to state 18
    RSQUARE         reduce using rule 174 (empty -> .)
    COMMA           reduce using rule 174 (empty -> .)

    generic_term                   shift and go to state 17
    generic_list                   shift and go to state 16
    empty                          shift and go to state 19

state 11

    (8) generic_class -> empty .

    OBSOLETE        reduce using rule 8 (generic_class -> empty .)
    INHERIT         reduce using rule 8 (generic_class -> empty .)
    CREATE          reduce using rule 8 (generic_class -> empty .)
    FEATURE         reduce using rule 8 (generic_class -> empty .)
    END             reduce using rule 8 (generic_class -> empty .)


state 12

    (2) class_header -> hmark CLASS IDENTIFIER .

    LSQUARE         reduce using rule 2 (class_header -> hmark CLASS IDENTIFIER .)
    OBSOLETE        reduce using rule 2 (class_header -> hmark CLASS IDENTIFIER .)
    INHERIT         reduce using rule 2 (class_header -> hmark CLASS IDENTIFIER .)
    CREATE          reduce using rule 2 (class_header -> hmark CLASS IDENTIFIER .)
    FEATURE         reduce using rule 2 (class_header -> hmark CLASS IDENTIFIER .)
    END             reduce using rule 2 (class_header -> hmark CLASS IDENTIFIER .)


state 13

    (1) class -> class_header generic_class obsolete_class . inheritance create features END
    (16) inheritance -> . INHERIT inh_list
    (17) inheritance -> . empty
    (174) empty -> .

    INHERIT         shift and go to state 21
    CREATE          reduce using rule 174 (empty -> .)
    FEATURE         reduce using rule 174 (empty -> .)
    END             reduce using rule 174 (empty -> .)

    inheritance                    shift and go to state 20
    empty                          shift and go to state 22

state 14

    (14) obsolete_class -> OBSOLETE . STRING

    STRING          shift and go to state 23


state 15

    (15) obsolete_class -> empty .

    INHERIT         reduce using rule 15 (obsolete_class -> empty .)
    CREATE          reduce using rule 15 (obsolete_class -> empty .)
    FEATURE         reduce using rule 15 (obsolete_class -> empty .)
    END             reduce using rule 15 (obsolete_class -> empty .)


state 16

    (7) generic_class -> LSQUARE generic_list . RSQUARE
    (10) generic_list -> generic_list . COMMA generic_term

    RSQUARE         shift and go to state 24
    COMMA           shift and go to state 25


state 17

    (9) generic_list -> generic_term .

    RSQUARE         reduce using rule 9 (generic_list -> generic_term .)
    COMMA           reduce using rule 9 (generic_list -> generic_term .)


state 18

    (12) generic_term -> IDENTIFIER . constraint
    (13) constraint -> . empty
    (174) empty -> .

    RSQUARE         reduce using rule 174 (empty -> .)
    COMMA           reduce using rule 174 (empty -> .)

    empty                          shift and go to state 26
    constraint                     shift and go to state 27

state 19

    (11) generic_list -> empty .

    RSQUARE         reduce using rule 11 (generic_list -> empty .)
    COMMA           reduce using rule 11 (generic_list -> empty .)


state 20

    (1) class -> class_header generic_class obsolete_class inheritance . create features END
    (60) create -> . create_block
    (61) create -> . empty
    (62) create_block -> . CREATE users_opt proc_list
    (174) empty -> .

    CREATE          shift and go to state 30
    FEATURE         reduce using rule 174 (empty -> .)
    END             reduce using rule 174 (empty -> .)

    create                         shift and go to state 28
    empty                          shift and go to state 29
    create_block                   shift and go to state 31

state 21

    (16) inheritance -> INHERIT . inh_list
    (18) inh_list -> . class_element
    (19) inh_list -> . inh_list class_element
    (20) inh_list -> . inh_list COLON class_element
    (21) class_element -> . class_type inh_features
    (168) class_type -> . IDENTIFIER generic

    IDENTIFIER      shift and go to state 35

    class_element                  shift and go to state 34
    class_type                     shift and go to state 32
    inh_list                       shift and go to state 33

state 22

    (17) inheritance -> empty .

    CREATE          reduce using rule 17 (inheritance -> empty .)
    FEATURE         reduce using rule 17 (inheritance -> empty .)
    END             reduce using rule 17 (inheritance -> empty .)


state 23

    (14) obsolete_class -> OBSOLETE STRING .

    INHERIT         reduce using rule 14 (obsolete_class -> OBSOLETE STRING .)
    CREATE          reduce using rule 14 (obsolete_class -> OBSOLETE STRING .)
    FEATURE         reduce using rule 14 (obsolete_class -> OBSOLETE STRING .)
    END             reduce using rule 14 (obsolete_class -> OBSOLETE STRING .)


state 24

    (7) generic_class -> LSQUARE generic_list RSQUARE .

    OBSOLETE        reduce using rule 7 (generic_class -> LSQUARE generic_list RSQUARE .)
    INHERIT         reduce using rule 7 (generic_class -> LSQUARE generic_list RSQUARE .)
    CREATE          reduce using rule 7 (generic_class -> LSQUARE generic_list RSQUARE .)
    FEATURE         reduce using rule 7 (generic_class -> LSQUARE generic_list RSQUARE .)
    END             reduce using rule 7 (generic_class -> LSQUARE generic_list RSQUARE .)


state 25

    (10) generic_list -> generic_list COMMA . generic_term
    (12) generic_term -> . IDENTIFIER constraint

    IDENTIFIER      shift and go to state 18

    generic_term                   shift and go to state 36

state 26

    (13) constraint -> empty .

    RSQUARE         reduce using rule 13 (constraint -> empty .)
    COMMA           reduce using rule 13 (constraint -> empty .)


state 27

    (12) generic_term -> IDENTIFIER constraint .

    RSQUARE         reduce using rule 12 (generic_term -> IDENTIFIER constraint .)
    COMMA           reduce using rule 12 (generic_term -> IDENTIFIER constraint .)


state 28

    (1) class -> class_header generic_class obsolete_class inheritance create . features END
    (68) features -> . fblock
    (69) features -> . empty
    (70) fblock -> . FEATURE users_opt fdec_list
    (174) empty -> .

    FEATURE         shift and go to state 38
    END             reduce using rule 174 (empty -> .)

    features                       shift and go to state 37
    fblock                         shift and go to state 39
    empty                          shift and go to state 40

state 29

    (61) create -> empty .

    FEATURE         reduce using rule 61 (create -> empty .)
    END             reduce using rule 61 (create -> empty .)


state 30

    (62) create_block -> CREATE . users_opt proc_list
    (63) users_opt -> . users
    (64) users_opt -> . empty
    (47) users -> . LCUR_PARN class_list RCUR_PARN
    (174) empty -> .

    LCUR_PARN       shift and go to state 43
    IDENTIFIER      reduce using rule 174 (empty -> .)
    COMMA           reduce using rule 174 (empty -> .)
    FEATURE         reduce using rule 174 (empty -> .)
    END             reduce using rule 174 (empty -> .)

    users                          shift and go to state 41
    empty                          shift and go to state 44
    users_opt                      shift and go to state 42

state 31

    (60) create -> create_block .

    FEATURE         reduce using rule 60 (create -> create_block .)
    END             reduce using rule 60 (create -> create_block .)


state 32

    (21) class_element -> class_type . inh_features
    (22) inh_features -> . feature_arrangement1
    (23) inh_features -> . feature_arrangement2
    (24) inh_features -> . feature_arrangement3
    (25) inh_features -> . feature_arrangement4
    (26) inh_features -> . feature_arrangement5
    (27) inh_features -> . empty
    (28) feature_arrangement1 -> . rename export_opt undefine_opt redefine_opt select_opt END
    (29) feature_arrangement2 -> . export undefine_opt redefine_opt select_opt END
    (30) feature_arrangement3 -> . undefine redefine_opt select_opt END
    (31) feature_arrangement4 -> . redefine select_opt END
    (32) feature_arrangement5 -> . select END
    (174) empty -> .
    (33) rename -> . RENAME rname_list
    (38) export -> . EXPORT elist
    (53) undefine -> . UNDEFINE routine_list
    (56) redefine -> . REDEFINE routine_list
    (59) select -> . SELECT routine_list

    COLON           reduce using rule 174 (empty -> .)
    IDENTIFIER      reduce using rule 174 (empty -> .)
    CREATE          reduce using rule 174 (empty -> .)
    FEATURE         reduce using rule 174 (empty -> .)
    END             reduce using rule 174 (empty -> .)
    RENAME          shift and go to state 46
    EXPORT          shift and go to state 50
    UNDEFINE        shift and go to state 49
    REDEFINE        shift and go to state 48
    SELECT          shift and go to state 53

    rename                         shift and go to state 45
    redefine                       shift and go to state 47
    feature_arrangement5           shift and go to state 55
    feature_arrangement4           shift and go to state 56
    feature_arrangement1           shift and go to state 57
    feature_arrangement3           shift and go to state 58
    feature_arrangement2           shift and go to state 59
    undefine                       shift and go to state 60
    select                         shift and go to state 51
    export                         shift and go to state 61
    empty                          shift and go to state 54
    inh_features                   shift and go to state 52

state 33

    (16) inheritance -> INHERIT inh_list .
    (19) inh_list -> inh_list . class_element
    (20) inh_list -> inh_list . COLON class_element
    (21) class_element -> . class_type inh_features
    (168) class_type -> . IDENTIFIER generic

    CREATE          reduce using rule 16 (inheritance -> INHERIT inh_list .)
    FEATURE         reduce using rule 16 (inheritance -> INHERIT inh_list .)
    END             reduce using rule 16 (inheritance -> INHERIT inh_list .)
    COLON           shift and go to state 63
    IDENTIFIER      shift and go to state 35

    class_element                  shift and go to state 62
    class_type                     shift and go to state 32

state 34

    (18) inh_list -> class_element .

    COLON           reduce using rule 18 (inh_list -> class_element .)
    IDENTIFIER      reduce using rule 18 (inh_list -> class_element .)
    CREATE          reduce using rule 18 (inh_list -> class_element .)
    FEATURE         reduce using rule 18 (inh_list -> class_element .)
    END             reduce using rule 18 (inh_list -> class_element .)


state 35

    (168) class_type -> IDENTIFIER . generic
    (169) generic -> . LSQUARE type_list RSQUARE
    (170) generic -> . empty
    (174) empty -> .

    LSQUARE         shift and go to state 65
    RENAME          reduce using rule 174 (empty -> .)
    EXPORT          reduce using rule 174 (empty -> .)
    UNDEFINE        reduce using rule 174 (empty -> .)
    REDEFINE        reduce using rule 174 (empty -> .)
    SELECT          reduce using rule 174 (empty -> .)
    COLON           reduce using rule 174 (empty -> .)
    IDENTIFIER      reduce using rule 174 (empty -> .)
    CREATE          reduce using rule 174 (empty -> .)
    FEATURE         reduce using rule 174 (empty -> .)
    END             reduce using rule 174 (empty -> .)
    RSQUARE         reduce using rule 174 (empty -> .)
    COMMA           reduce using rule 174 (empty -> .)
    RPAREN          reduce using rule 174 (empty -> .)
    IS              reduce using rule 174 (empty -> .)
    FROZEN          reduce using rule 174 (empty -> .)

    generic                        shift and go to state 64
    empty                          shift and go to state 66

state 36

    (10) generic_list -> generic_list COMMA generic_term .

    RSQUARE         reduce using rule 10 (generic_list -> generic_list COMMA generic_term .)
    COMMA           reduce using rule 10 (generic_list -> generic_list COMMA generic_term .)


state 37

    (1) class -> class_header generic_class obsolete_class inheritance create features . END

    END             shift and go to state 67


state 38

    (70) fblock -> FEATURE . users_opt fdec_list
    (63) users_opt -> . users
    (64) users_opt -> . empty
    (47) users -> . LCUR_PARN class_list RCUR_PARN
    (174) empty -> .

    LCUR_PARN       shift and go to state 43
    FROZEN          reduce using rule 174 (empty -> .)
    IDENTIFIER      reduce using rule 174 (empty -> .)

    users                          shift and go to state 41
    empty                          shift and go to state 44
    users_opt                      shift and go to state 68

state 39

    (68) features -> fblock .

    END             reduce using rule 68 (features -> fblock .)


state 40

    (69) features -> empty .

    END             reduce using rule 69 (features -> empty .)


state 41

    (63) users_opt -> users .

    FROZEN          reduce using rule 63 (users_opt -> users .)
    IDENTIFIER      reduce using rule 63 (users_opt -> users .)
    COMMA           reduce using rule 63 (users_opt -> users .)
    FEATURE         reduce using rule 63 (users_opt -> users .)
    END             reduce using rule 63 (users_opt -> users .)


state 42

    (62) create_block -> CREATE users_opt . proc_list
    (65) proc_list -> . IDENTIFIER
    (66) proc_list -> . proc_list COMMA IDENTIFIER
    (67) proc_list -> . empty
    (174) empty -> .

    IDENTIFIER      shift and go to state 70
    COMMA           reduce using rule 174 (empty -> .)
    FEATURE         reduce using rule 174 (empty -> .)
    END             reduce using rule 174 (empty -> .)

    proc_list                      shift and go to state 69
    empty                          shift and go to state 71

state 43

    (47) users -> LCUR_PARN . class_list RCUR_PARN
    (48) class_list -> . IDENTIFIER
    (49) class_list -> . class_list COMMA IDENTIFIER
    (50) class_list -> . empty
    (174) empty -> .

    IDENTIFIER      shift and go to state 73
    RCUR_PARN       reduce using rule 174 (empty -> .)
    COMMA           reduce using rule 174 (empty -> .)

    class_list                     shift and go to state 72
    empty                          shift and go to state 74

state 44

    (64) users_opt -> empty .

    FROZEN          reduce using rule 64 (users_opt -> empty .)
    IDENTIFIER      reduce using rule 64 (users_opt -> empty .)
    COMMA           reduce using rule 64 (users_opt -> empty .)
    FEATURE         reduce using rule 64 (users_opt -> empty .)
    END             reduce using rule 64 (users_opt -> empty .)


state 45

    (28) feature_arrangement1 -> rename . export_opt undefine_opt redefine_opt select_opt END
    (36) export_opt -> . export
    (37) export_opt -> . empty
    (38) export -> . EXPORT elist
    (174) empty -> .

    EXPORT          shift and go to state 50
    UNDEFINE        reduce using rule 174 (empty -> .)
    REDEFINE        reduce using rule 174 (empty -> .)
    SELECT          reduce using rule 174 (empty -> .)
    END             reduce using rule 174 (empty -> .)

    export                         shift and go to state 75
    export_opt                     shift and go to state 76
    empty                          shift and go to state 77

state 46

    (33) rename -> RENAME . rname_list
    (34) rname_list -> . fname ASSIGN fname
    (35) rname_list -> . rname_list COMMA fname ASSIGN fname
    (163) fname -> . IDENTIFIER

    IDENTIFIER      shift and go to state 80

    rname_list                     shift and go to state 79
    fname                          shift and go to state 78

state 47

    (31) feature_arrangement4 -> redefine . select_opt END
    (57) select_opt -> . select
    (58) select_opt -> . empty
    (59) select -> . SELECT routine_list
    (174) empty -> .

    SELECT          shift and go to state 53
    END             reduce using rule 174 (empty -> .)

    select_opt                     shift and go to state 82
    empty                          shift and go to state 83
    select                         shift and go to state 81

state 48

    (56) redefine -> REDEFINE . routine_list
    (45) routine_list -> . fname
    (46) routine_list -> . empty
    (163) fname -> . IDENTIFIER
    (174) empty -> .

    IDENTIFIER      shift and go to state 80
    SELECT          reduce using rule 174 (empty -> .)
    END             reduce using rule 174 (empty -> .)

    empty                          shift and go to state 84
    fname                          shift and go to state 85
    routine_list                   shift and go to state 86

state 49

    (53) undefine -> UNDEFINE . routine_list
    (45) routine_list -> . fname
    (46) routine_list -> . empty
    (163) fname -> . IDENTIFIER
    (174) empty -> .

    IDENTIFIER      shift and go to state 80
    REDEFINE        reduce using rule 174 (empty -> .)
    SELECT          reduce using rule 174 (empty -> .)
    END             reduce using rule 174 (empty -> .)

    empty                          shift and go to state 84
    fname                          shift and go to state 85
    routine_list                   shift and go to state 87

state 50

    (38) export -> EXPORT . elist
    (39) elist -> . eitem
    (40) elist -> . elist eitem
    (41) elist -> . elist COMMA eitem
    (42) eitem -> . users routine
    (47) users -> . LCUR_PARN class_list RCUR_PARN

    LCUR_PARN       shift and go to state 43

    elist                          shift and go to state 89
    eitem                          shift and go to state 90
    users                          shift and go to state 88

state 51

    (32) feature_arrangement5 -> select . END

    END             shift and go to state 91


state 52

    (21) class_element -> class_type inh_features .

    COLON           reduce using rule 21 (class_element -> class_type inh_features .)
    IDENTIFIER      reduce using rule 21 (class_element -> class_type inh_features .)
    CREATE          reduce using rule 21 (class_element -> class_type inh_features .)
    FEATURE         reduce using rule 21 (class_element -> class_type inh_features .)
    END             reduce using rule 21 (class_element -> class_type inh_features .)


state 53

    (59) select -> SELECT . routine_list
    (45) routine_list -> . fname
    (46) routine_list -> . empty
    (163) fname -> . IDENTIFIER
    (174) empty -> .

    IDENTIFIER      shift and go to state 80
    END             reduce using rule 174 (empty -> .)

    empty                          shift and go to state 84
    fname                          shift and go to state 85
    routine_list                   shift and go to state 92

state 54

    (27) inh_features -> empty .

    COLON           reduce using rule 27 (inh_features -> empty .)
    IDENTIFIER      reduce using rule 27 (inh_features -> empty .)
    CREATE          reduce using rule 27 (inh_features -> empty .)
    FEATURE         reduce using rule 27 (inh_features -> empty .)
    END             reduce using rule 27 (inh_features -> empty .)


state 55

    (26) inh_features -> feature_arrangement5 .

    COLON           reduce using rule 26 (inh_features -> feature_arrangement5 .)
    IDENTIFIER      reduce using rule 26 (inh_features -> feature_arrangement5 .)
    CREATE          reduce using rule 26 (inh_features -> feature_arrangement5 .)
    FEATURE         reduce using rule 26 (inh_features -> feature_arrangement5 .)
    END             reduce using rule 26 (inh_features -> feature_arrangement5 .)


state 56

    (25) inh_features -> feature_arrangement4 .
